--- a/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
@@ -175,7 +175,7 @@
 
 .today-cell {
   background: #FBFBFB !important;
-  border: 2px solid #D2D2CB !important;
+  border: 2px solid #71716D !important;
 }
 
   .today-cell .cell-span-container {
