--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -24,7 +24,7 @@
       <header class="display-events-overview-header">
         <span class="display-events-header-menu-title hover-cursor-pointer" data-bind="click: function () { $root.showSelectedJournalMenuItem( 1 ) }, css: { selected: $root.detailsPageJournalMenu.selectedMenuItem() === 1 }">Mój kalendarz</span>
         <span class="display-events-header-menu-title hover-cursor-pointer" data-bind="click: function () { $root.showSelectedJournalMenuItem( 2 ) }, css: { selected: $root.detailsPageJournalMenu.selectedMenuItem() === 2 }">Moje publiczne wydarzenia</span>
-        <div class="hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</div>
+        <div class="hover-cursor-pointer btn-close" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</div>
       </header>
 
       @Html.Partial("_DetailsMyCalendarMenuItem")
@@ -56,7 +56,9 @@
     <div id="detailsEventsAndNotesContainer">
 
       <div id="detailsEventBlockList" data-bind="foreach: detailsPageDayEvents()">
-        @Html.Partial("_DetailsEventBlock")
+        <div class="event-block-container" data-bind="attr: { 'data-eventid': id }">
+          @Html.Partial("_LobbyEventBlock")
+        </div>
       </div>
       <div id="notesContainer">
         @Html.Partial("_DetailsNotesSummary")
