--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -293,12 +293,13 @@ fieldset {
 }
 
 .display-events-overview-item {
-  border-left: 2px solid #DEDEDE;
+  border-left: 2px solid #cecece;
   border-right: 2px solid #DEDEDE;
   border-bottom: 2px solid #E6E6E6;
   border-top: 1px solid #FFFFFF;
   background: #F7F7F7;
   overflow: hidden;
+  min-height: 29px;
 }
 
 .oldorupcoming-text-container {
@@ -380,7 +381,8 @@ fieldset {
 
 #detailsDayTable {
   position: relative;
-  padding: 1% 2%;
+  padding: 0 2%;
+  padding-bottom: 40px;
   width: 88%;
   margin: 0 auto;
   background: rgb(132, 132, 132);
@@ -405,6 +407,7 @@ fieldset {
     padding-top: 4px;
     padding-bottom: 4px;
     padding-left: 1px;
+    border-bottom:2px solid #5f5f5f;
   }
 
   #detailsDayTable .details-day-table-cell {
@@ -481,12 +484,12 @@ fieldset {
 .notes-shadow-box {
   position: relative;
   /*background: rgb(245, 242, 230);*/
-  background: rgb(253, 253, 249);
-  border: 2px solid #FAFAF0;
-  color: rgba(0,0,0, .8);
+  /*background: rgb(253, 253, 249);
+  border: 2px solid #FAFAF0;*/
+  color: wheat;
 }
 
-  .notes-shadow-box::before, .notes-shadow-box::after {
+/*.notes-shadow-box::before, .notes-shadow-box::after {
     z-index: -1;
     position: absolute;
     content: "";
@@ -504,26 +507,32 @@ fieldset {
     transform: rotate(3deg);
     right: 10px;
     left: auto;
-  }
+  }*/
 
 #notesTxtArea {
   width: 100%;
   height: 80px;
   box-sizing: border-box;
   font-size: 1.4em;
-  background: rgb(242, 242, 229);
+  background: rgb(202, 202, 202);
   padding: 10px;
   resize: none;
-  border-style: none;
-  border-color: Transparent;
+  /* border-style: none; */
+  /* border-color: Transparent; */
+  border-bottom: 2px solid #cacaca;
   overflow: auto;
   -webkit-appearance: none;
   outline: 0;
+  color: #676767;
 }
 
 #btnAddNewNote {
   float: right;
   margin-bottom: 10px;
+  font-size: 2em;
+  padding: 0 25px;
+  background: #efefef;
+  border: 2px solid #efefef;
 }
 
 #notesList {
@@ -538,7 +547,7 @@ fieldset {
 }
 
 .note-content {
-  border-bottom: 1px solid rgb(235, 235, 217);
+  border-bottom: 1px solid rgb(160, 160, 160);
 }
 
 .edit-mode-note-container {
@@ -681,7 +690,6 @@ fieldset {
 
 
 .display-events-overview-item-list {
-  padding-left: 100px;
 }
 
 .section-title {
@@ -689,13 +697,18 @@ fieldset {
   color: #5D5D59;
   border-bottom: 1px solid #FFFFFF;
   text-align: center;
+  padding: 20px;
 }
 
 .hover-cursor-pointer:hover {
   cursor: pointer;
 }
 
-.line-through-text {
+li.line-through-text{
+  color: rgba(245, 222, 179, 0.39);
+}
+
+.line-through-text pre{
   text-decoration: line-through;
 }
 
@@ -708,11 +721,17 @@ fieldset {
   font-size: 1em;
   color: #5D5B55;
   overflow: hidden;
+  min-height: 29px;
+}
+
+.display-events-overview-item-list-inner-wrapper {
+  background: #cecece;
 }
 
 .list-item-title {
-  font-size: 1.4em;
   line-height: 1;
+  vertical-align: bottom;
+  padding-left: 4px;
 }
 
 .list-item-star {
@@ -733,12 +752,20 @@ fieldset {
   padding: 0 4px;
 }
 
+.event-block-expand {
+  border: 5px solid #cecece;
+}
+
 .event-kind-tag {
-  padding: 5px;
   width: 100px;
   text-align: center;
-  display: inline-block;
+  float: left;
+  margin-right: 1px;
   background: #807C77;
+  clear: both;
+  min-height: 32px;
+  padding: 5px;
+  box-sizing: border-box;
 }
 
 .dziennik-menu-container {
@@ -865,6 +892,7 @@ fieldset {
   margin-right: 50%;
   position: relative;
   left: 4px;
+  padding: 0 25px;
 }
 
 #addNewEventShowMoreOptionsLink {
