--- a/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
@@ -5,7 +5,7 @@
   display: inline-block;
   width: 33%;
   vertical-align: top;
-  margin: 2px;
+  margin: 1px;
 }
 
 #lobbyEventsMasonryContainer .event-block {
@@ -20,10 +20,10 @@
 
 #lobbyEventsMasonryContainer .event-block-info-name {
   font-size: 1.5em;
-  background: #949089;
-  color: wheat;
+  background: #e6e5e5;
+  color: #636363;
   padding: 6px;
-  border-bottom: 2px solid whitesmoke;
+  border-bottom: 1px solid whitesmoke;
 }
 
 #lobbyEventsMasonryContainer .event-kind-tag {
@@ -31,9 +31,7 @@
   font-size: 1em;
   float: right;
   text-align: center;
-  border: 1px solid #807C77;
-  border-left: 1px solid darkgrey;
-  min-height:0;
+  min-height: 0;
 }
 
 #lobbyEventsMasonryContainer .event-block-body {
@@ -46,7 +44,6 @@
   padding: 10px;
   overflow: hidden;
   color: rgb(152, 152, 137);
-  background: rgba(222, 220, 220, 0.5);
 }
 
 #lobbyEventsMasonryContainer .event-block-info-date {
@@ -75,7 +72,7 @@
 /*Details - detailsEventBlockList*/
 
 #detailsEventBlockList .event-block-container {
-  margin: 2px;
+  margin: 1px;
 }
 
 #detailsEventBlockList .event-block {
@@ -90,10 +87,10 @@
 
 #detailsEventBlockList .event-block-info-name {
   font-size: 1.5em;
-  background: #949089;
-  color: wheat;
+  background: #e6e5e5;
+  color: #636363;
   padding: 6px;
-  border-bottom: 2px solid whitesmoke;
+  border-bottom: 1px solid whitesmoke;
 }
 
 #detailsEventBlockList .event-kind-tag {
@@ -101,8 +98,6 @@
   font-size: 1em;
   float: right;
   text-align: center;
-  border: 1px solid #807C77;
-  border-left: 1px solid darkgrey;
 }
 
 #detailsEventBlockList .event-block-body {
@@ -115,7 +110,6 @@
   padding: 10px;
   overflow: hidden;
   color: rgb(152, 152, 137);
-  background: rgba(222, 220, 220, 0.5);
 }
 
 #detailsEventBlockList .event-block-info-date {
@@ -141,7 +135,7 @@
   float: right;
 }
 
-/*Lobby and Details - event-block-expand*/ 
+/*Lobby and Details - event-block-expand*/
 
 .event-block-expand .event-block {
   color: rgb(250, 250, 250);
@@ -155,10 +149,10 @@
 
 .event-block-expand .event-block-info-name {
   font-size: 1.5em;
-  background: #949089;
-  color: wheat;
+  background: #e6e5e5;
+  color: #636363;
   padding: 6px;
-  border-bottom: 2px solid whitesmoke;
+  border-bottom: 1px solid whitesmoke;
 }
 
 .event-block-expand .event-kind-tag {
@@ -166,21 +160,23 @@
   font-size: 1em;
   float: right;
   text-align: center;
-  border: 1px solid #807C77;
-  border-left: 1px solid darkgrey;
 }
 
 .event-block-expand .event-block-body {
   color: rgb(72, 68, 62);
   padding: 10px;
   font-size: 1.2em;
+  background: rgb(236, 236, 236);
 }
+
+  .event-block-expand .event-block-body :hover {
+    background: initial;
+  }
 
 .event-block-expand .event-block-footer {
   padding: 10px;
   overflow: hidden;
   color: rgb(152, 152, 137);
-  background: rgba(222, 220, 220, 0.5);
 }
 
 .event-block-expand .event-block-info-date {
