--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -407,7 +407,7 @@ fieldset {
     padding-top: 4px;
     padding-bottom: 4px;
     padding-left: 1px;
-    border-bottom:2px solid #5f5f5f;
+    border-bottom: 2px solid #5f5f5f;
   }
 
   #detailsDayTable .details-day-table-cell {
@@ -486,7 +486,7 @@ fieldset {
   /*background: rgb(245, 242, 230);*/
   /*background: rgb(253, 253, 249);
   border: 2px solid #FAFAF0;*/
-  color: wheat;
+  color: #ececec;
 }
 
 /*.notes-shadow-box::before, .notes-shadow-box::after {
@@ -514,16 +514,14 @@ fieldset {
   height: 80px;
   box-sizing: border-box;
   font-size: 1.4em;
-  background: rgb(202, 202, 202);
+  background: rgb(125, 124, 124);
   padding: 10px;
   resize: none;
-  /* border-style: none; */
-  /* border-color: Transparent; */
-  border-bottom: 2px solid #cacaca;
+  border: 1px solid #a9a9a9;
   overflow: auto;
   -webkit-appearance: none;
   outline: 0;
-  color: #676767;
+  color: #f7f7f7;
 }
 
 #btnAddNewNote {
@@ -547,7 +545,7 @@ fieldset {
 }
 
 .note-content {
-  border-bottom: 1px solid rgb(160, 160, 160);
+  border-bottom: 1px solid rgb(150, 149, 149);
 }
 
 .edit-mode-note-container {
@@ -704,11 +702,11 @@ fieldset {
   cursor: pointer;
 }
 
-li.line-through-text{
-  color: rgba(245, 222, 179, 0.39);
+li.line-through-text {
+  color: rgba(0, 0, 0, 0.5);
 }
 
-.line-through-text pre{
+.line-through-text pre {
   text-decoration: line-through;
 }
 
@@ -723,6 +721,15 @@ li.line-through-text{
   overflow: hidden;
   min-height: 29px;
 }
+
+  .overview-item-inner-wrapper:hover {
+    background: #ececec;
+    cursor: pointer;
+  }
+
+  .overview-item-inner-wrapper.selected {
+    background: #ececec;
+  }
 
 .display-events-overview-item-list-inner-wrapper {
   background: #cecece;
@@ -760,7 +767,6 @@ li.line-through-text{
   width: 100px;
   text-align: center;
   float: left;
-  margin-right: 1px;
   background: #807C77;
   clear: both;
   min-height: 32px;
