--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model KalendarzKarieryData.Models.ViewModels.MainViewModel
+﻿
+@model KalendarzKarieryData.Models.ViewModels.MainViewModel
 
 <div id="dzieuo" style="visibility: hidden;">
 
@@ -52,13 +53,13 @@
 <script src="~/Scripts/JSManagers/EventManager.js"></script>
 <script src="~/Scripts/JSManagers/NoteManager.js"></script>
 
-<script src="~/Scripts/Program.js"></script>
+<script src="~/Scripts/app.js"></script>
 
 <script type="text/javascript">
 
 	$(function () { 
 		"use strict";
-		var PROGRAM = Program, siteLoadingTextAnimationInterval = {interval : null};
+		var APP = App, siteLoadingTextAnimationInterval = {interval : null};
 		var indexViewModel = @Html.Raw( Json.Encode( @Model.IndexViewModel ) );
 		var userName = '@User.Identity.Name.ToLower()';
 		var $dzieuo = $("#dzieuo");
@@ -67,12 +68,12 @@
 		//Start of application
 		//////////////////////////
 
-		PROGRAM.initializeSiteLoadingText();
-		PROGRAM.animateSiteLoadingText(siteLoadingTextAnimationInterval);
-		PROGRAM.initializeJQueryExtentionMethods(SIMPLE_FILT());
-		PROGRAM.initializeDzieuoPlugin($dzieuo);
-		PROGRAM.initialize(indexViewModel, userName, PROGRAM.initializeLoader());
-		PROGRAM.displaySiteAfterLoad(siteLoadingTextAnimationInterval, $dzieuo);	
+		APP.initializeSiteLoadingText();
+		APP.animateSiteLoadingText(siteLoadingTextAnimationInterval);
+		APP.initializeJQueryExtentionMethods(SIMPLE_FILT());
+		APP.initializeDzieuoPlugin($dzieuo);
+		APP.initialize(indexViewModel, userName, APP.initializeLoader());
+		APP.displaySiteAfterLoad(siteLoadingTextAnimationInterval, $dzieuo);	
 	});
 
 </script>
