--- a/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
@@ -2,192 +2,192 @@
 /*Lobby - lobbyEventsMasonryContainer*/
 
 #lobbyEventsMasonryContainer .event-block-container {
-  display: inline-block;
-  width: 33%;
-  vertical-align: top;
-  margin: 1px;
+	display: inline-block;
+	width: 33%;
+	vertical-align: top;
+	margin: 1px;
 }
 
 #lobbyEventsMasonryContainer .event-block {
-  line-height: 1;
-  background:rgb(250,250,250);
+	line-height: 1;
+	background: rgb(250,250,250);
 }
 
 #lobbyEventsMasonryContainer .event-block-info-link {
-  word-break: break-all;
+	word-break: break-all;
 }
 
 #lobbyEventsMasonryContainer .event-block-info-name {
-  font-size: 1.5em;
-  color: #636363;
-  padding: 6px;
+	font-size: 1.5em;
+	color: #636363;
+	padding: 6px;
 }
 
 #lobbyEventsMasonryContainer .event-kind-tag {
-  line-height: 1.5;
-  font-size: 1em;
-  float: right;
-  text-align: center;
-  min-height: 0;
+	line-height: 1.5;
+	font-size: 1em;
+	float: right;
+	text-align: center;
+	min-height: 0;
 }
 
 #lobbyEventsMasonryContainer .event-block-body {
-  color: rgb(72, 68, 62);
-  padding: 10px;
-  font-size: 1.2em;
+	color: rgb(72, 68, 62);
+	padding: 10px;
+	font-size: 1.2em;
 }
 
 #lobbyEventsMasonryContainer .event-block-footer {
-  padding: 10px;
-  overflow: hidden;
-  color: rgb(152, 152, 137);
+	padding: 10px;
+	overflow: hidden;
+	color: rgb(152, 152, 137);
 }
 
 #lobbyEventsMasonryContainer .event-block-info-date {
-  margin-bottom: 2px;
-  font-size: 1.6em;
+	margin-bottom: 2px;
+	font-size: 1.6em;
 }
 
 #lobbyEventsMasonryContainer .event-block-info-body {
-  margin-top: 20px;
+	margin-top: 20px;
 }
 
 #lobbyEventsMasonryContainer .event-block-info-time {
-  font-size: 1.2em;
-  color: #969689;
+	font-size: 1.2em;
+	color: #969689;
 }
 
 #lobbyEventsMasonryContainer .event-block-info-addedby {
-  color: gray;
-  text-align: right;
+	color: gray;
+	text-align: right;
 }
 
 #lobbyEventsMasonryContainer .event-block-menu {
-  float: right;
+	float: right;
 }
 
 /*Details - detailsEventBlockList*/
 
 #detailsEventBlockList .event-block-container {
-  margin: 1px;
+	margin: 2px;
 }
 
 #detailsEventBlockList .event-block {
-  line-height: 1;
-  background: rgb(250, 250, 250);
+	line-height: 1;
+	background: rgb(103, 103, 103);
 }
 
 #detailsEventBlockList .event-block-info-link {
-  word-break: break-all;
+	word-break: break-all;
 }
 
 #detailsEventBlockList .event-block-info-name {
-  font-size: 1.5em;
-  color: #636363;
-  padding: 6px;
+	font-size: 1.5em;
+	color: #f7f7f7;
+	padding: 6px;
 }
 
 #detailsEventBlockList .event-kind-tag {
-  line-height: 1.5;
-  font-size: 1em;
-  float: right;
-  text-align: center;
+	line-height: 1.5;
+	font-size: 1em;
+	float: right;
+	text-align: center;
 }
 
 #detailsEventBlockList .event-block-body {
-  color: rgb(72, 68, 62);
-  padding: 10px;
-  font-size: 1.2em;
+	color: rgb(72, 68, 62);
+	padding: 10px;
+	font-size: 1.2em;
 }
 
 #detailsEventBlockList .event-block-footer {
-  padding: 10px;
-  overflow: hidden;
-  color: rgb(152, 152, 137);
+	padding: 10px;
+	overflow: hidden;
+	color: rgb(152, 152, 137);
 }
 
 #detailsEventBlockList .event-block-info-date {
-  margin-bottom: 2px;
-  font-size: 1.6em;
+	margin-bottom: 2px;
+	font-size: 1.6em;
 }
 
 #detailsEventBlockList .event-block-info-body {
-  margin-top: 20px;
+	margin-top: 20px;
 }
 
 #detailsEventBlockList .event-block-info-time {
-  font-size: 1.2em;
-  color: #969689;
+	font-size: 1.8em;
+	color: #b3b3b3;
 }
 
 #detailsEventBlockList .event-block-info-addedby {
-  color: gray;
-  text-align: right;
+	color: gray;
+	text-align: right;
 }
 
 #detailsEventBlockList .event-block-menu {
-  float: right;
+	float: right;
 }
 
 /*Lobby and Details - event-block-expand*/
 
 .event-block-expand .event-block {
-  line-height: 1;
-  background: rgb(250, 250, 250);
+	line-height: 1;
+	background: rgb(250, 250, 250);
 }
 
 .event-block-expand .event-block-info-link {
-  word-break: break-all;
+	word-break: break-all;
 }
 
 .event-block-expand .event-block-info-name {
-  font-size: 1.5em;
-  color: #636363;
-  padding: 6px;
+	font-size: 1.5em;
+	color: #636363;
+	padding: 6px;
 }
 
 .event-block-expand .event-kind-tag {
-  line-height: 1.5;
-  font-size: 1em;
-  float: right;
-  text-align: center;
+	line-height: 1.5;
+	font-size: 1em;
+	float: right;
+	text-align: center;
 }
 
 .event-block-expand .event-block-body {
-  color: rgb(72, 68, 62);
-  padding: 10px;
-  font-size: 1.2em;
+	color: rgb(72, 68, 62);
+	padding: 10px;
+	font-size: 1.2em;
 }
 
-  .event-block-expand .event-block-body :hover {
-    background: initial;
-  }
+	.event-block-expand .event-block-body :hover {
+		background: initial;
+	}
 
 .event-block-expand .event-block-footer {
-  padding: 10px;
-  overflow: hidden;
-  color: rgb(152, 152, 137);
+	padding: 10px;
+	overflow: hidden;
+	color: rgb(152, 152, 137);
 }
 
 .event-block-expand .event-block-info-date {
-  margin-bottom: 2px;
-  font-size: 1.6em;
+	margin-bottom: 2px;
+	font-size: 1.6em;
 }
 
 .event-block-expand .event-block-info-body {
-  margin-top: 20px;
+	margin-top: 20px;
 }
 
 .event-block-expand .event-block-info-time {
-  font-size: 1.2em;
-  color: #969689;
+	font-size: 1.2em;
+	color: #969689;
 }
 
 .event-block-expand .event-block-info-addedby {
-  color: gray;
-  text-align: right;
+	color: gray;
+	text-align: right;
 }
 
 .event-block-expand .event-block-menu {
-  float: right;
+	float: right;
 }
